Center images. Bug with box alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
+div {
+  width: 30%;
+  float: left;
+  padding: 5px;
+  text-align: right;
+}
+
 .pet p {
-  text-align: center;
   color: orange;
   background-color: gray;
 }
@@ -8,4 +14,10 @@
   text-align: center;
   color: blue;
   background-color: honeydew;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
